test/fail/associated_const_with_value.rs
#[objective::objective]
trait Test {
    const CONST: usize = 12;
}

fn main() {}
