test/fail/associated_const_with_value.stderr
error: Objective only supports types and functions in traits
 --> test/fail/associated_const_with_value.rs:3:5
  |
3 |     const CONST: usize = 12;
  |     ^^^^^
